LU-2073 procfs: procfs symlinks are apparently never freed

We shouldn't set proc_dir_entry->data to NULL in any case.
There must cause memleak when it is a symlink entry.

Signed-off-by: yang sheng <ys@whamcloud.com>
Change-Id: I45c82fd206be738b5fdc4b2e612c3d87a708df67
Reviewed-on: http://review.whamcloud.com/4434
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Bobi Jam <bobijam@whamcloud.com>